fixed JS, text responsiveness, & content spacing
going to reduce wrapper width

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,6 +6,7 @@
 
 
 /* Typography */
+    /* Typeface */
 h1, 
 h2,
 h3,
@@ -24,42 +25,50 @@ p {
     font-weight: 300;
     font-style: normal;
 }
+    /* Font Size */
+h1 {
+    font-size: 3vw;
+}
+h2 {
+    font-size: 1.9vw;
+}
+h3 {
+    font-size: 1.7vw;
+}
+p {
+    font-size: 1.4vw;
+}
 
 
 /* Header */
 header {
-    padding: 50px 10px;
+    padding: 1.5vw 10px 5vw;
 }
-
 #logo img {
     float: left;
-    max-height: calc(80px + 50px + 5px);
-    padding-right: 40px;
+    max-height: calc(3vw + 1.9vw + 0.2vw);
+    padding-right: 1.5vw;
 }
-h1 {
-    font-size: 80px;
-}
-h2 {
-    font-size: 50px;
-    padding: 5px 0 0;
+header h2 {
+    padding: 0.2vw 0 0;
 }
 
 
 /* Body Text */
+#bodyText h3 {
+    padding-left: 10px;
+    padding-bottom: 0.1vw;
+}
 #bodyText p {
-    font-size: 20px;
-    line-height: 1.3;
-    padding-left: 80px;
-    padding-right: 80px;
-    padding-bottom: 40px;
+    line-height: 1.4;
+    padding: 0 10px 3vw;
 }
 
 
 /* Gallery */
 h3 {
     padding-left: 10px;
-    padding-bottom: 10px;
-    font-size: 30px;
+    padding-bottom: 0.1vw;
 }
 #gallery {
     display: grid;
@@ -79,19 +88,19 @@ h3 {
     display: none;
     position: fixed;
     z-index: 1;
-    padding: 0 10px;
-    left: 10%;
-    top: 10%;
-    width: calc(80% - 20px);
-    height: 80%;
+    padding: 0;
+    left: 0%;
+    top: 0%;
+    width: 100%;
+    height: 100%;
     overflow-y: auto;
-    background-color: rgb(128, 128, 128);
+    background-color: transparent; /* fallback */
     background-color: rgba(0, 0, 0, 0.5);
 }
 .modal div {
     background-color: #999;
-    width: 80%;
-    padding: 5% 5%;
+    width: calc(65% - 20px);
+    padding: 5%;
     margin: 5% auto;
 }
 .closeModal {
@@ -99,5 +108,5 @@ h3 {
     font-family: bc-alphapipe, sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 50px;
+    font-size: 5vw;
 }
